[package]
name = "indexedRAG"
version = "0.1.0"
edition = "2021"

[dependencies]

# Pin older versions that do NOT require litemap 0.7
eframe = "0.18"
egui   = "0.18"

# or, if you want a slightly newer version, try 0.19:
# eframe = "0.19"
# egui   = "0.19"

# Other dependencies
rusqlite = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"




